Created Mflix Project using Mongodb

--- a/.ini
+++ b/.ini
@@ -4,10 +4,10 @@
 
 [PROD]
 SECRET_KEY = qwertyuiopasdfghjklzxcvbnm
-MFLIX_DB_URI = mongodb+srv://m220student:m220password@m220.fr9yj.mongodb.net/test
+MFLIX_DB_URI = mongodb+srv://mflixAppUser:mflixAppPwd@mflix.o8h61.mongodb.net/test
 MFLIX_NS = sample_mflix
 
 [TEST]
 SECRET_KEY = qwertyuiopasdfghjklzxcvbnm
-MFLIX_DB_URI = mongodb+srv://m220student:m220password@m220.fr9yj.mongodb.net/test
+MFLIX_DB_URI = mongodb+srv://mflixAppUser:mflixAppPwd@mflix.o8h61.mongodb.net/test
 MFLIX_NS = sample_mflix
